--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "frontend": "file:",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
