--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:18
+FROM node:18.20.8-bullseye
 
 WORKDIR /app
 
+# Install dependencies (no need for --build-from-source)
 COPY package*.json ./
 RUN npm install
 
