--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: finantrack-frontend-service
 spec:
+  type: NodePort
   selector:
     app: finantrack-frontend
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
-  type: LoadBalancer
+      nodePort: 31156
